# FTS-EQ

./: Cargo.toml
eq-dsp/: Cargo.toml
eq-dsp-v2/: Cargo.toml
eq-plugin/: Cargo.toml
eq-pro-dsp/: Cargo.toml
eq-pro-dsp/src/: band.rs  cascade.rs  design.rs  lib.rs  proq4_peak.rs  section.rs
eq-ui/: Cargo.toml
